--- a/style.css
+++ b/style.css
@@ -1,14 +1,47 @@
+.container {
+  max-width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Raleway;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 500px 500px 200px 100px;
+  grid-template-areas: 'header header' 'sidebar main' 'sidebar main' 'sidebar main' 'footer footer';
+}
+
 header {
-  display: inline-block;
-  background: black;
+  width: 100%;
+  grid-area: header;
 }
 
 header h1 {
   display: inline-block;
   font-size: 36px;
+  padding-left: 30px;
   color: white;
 }
 
+nav {
+  background: rgb(33, 32, 32);
+}
+
 nav ul {
-  display: inline-block;
+  float: right;
+  padding-top: 22px;
+}
+
+nav ul li {
+  list-style-type: none;
+  display: inline;
+  margin: 0px 100px 0px 0px;
+  font-size: 1.2rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.sidebar {
+  grid-area: sidebar;
 }
